<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailEvent.DetailEventFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="280dp">

            <ImageView
                android:id="@+id/eventImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/event_image"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#65000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/categoryEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/badge"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"

                    android:text="@string/category"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/eventName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/nunito_bold"
                    android:maxLines="1"
                    android:text="@string/bernadya_solo_concert"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/calendar"
                            android:src="@drawable/baseline_calendar_today_24"
                            app:tint="@color/white" />

                        <TextView
                            android:id="@+id/eventDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_26_august_2024"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:text="@string/dot"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/location"
                            android:src="@drawable/baseline_location_pin_24"
                            app:tint="@color/white" />

                        <TextView
                            android:id="@+id/eventLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jombang_east_java"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nunito_bold"
                android:maxLines="1"
                android:text="@string/about_event"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"

                >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/rounded"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/owner_icon"
                        android:src="@drawable/baseline_person_24"
                        app:tint="@color/purple_200" />
                </FrameLayout>

                <TextView
                    android:id="@+id/eventOwnerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/bernadya"
                    android:textColor="@color/soft_gray_purple"
                    android:textSize="14sp"
                    android:fontFamily="@font/nunito_semi_bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"

                >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/rounded"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/group_icon"
                        android:src="@drawable/baseline_groups_24"
                        app:tint="@color/purple_200" />
                </FrameLayout>

                <TextView
                    android:id="@+id/eventParticipant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/_0_0"
                    android:textColor="@color/soft_gray_purple"
                    android:textSize="14sp"
                    android:fontFamily="@font/nunito_semi_bold"
 />
            </LinearLayout>

            <TextView
                android:id="@+id/eventSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nunito_regular"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nunito_bold"
                android:maxLines="1"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/eventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/nunito_regular"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <Button
                android:id="@+id/btnMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="54dp"
                android:background="@drawable/rounded_button"
                android:text="@string/more_detail"
                android:textAllCaps="false" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>