<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/rounded_image"
    android:paddingVertical="4dp">


    <FrameLayout
        android:id="@+id/actBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:background="@drawable/rounded"
        android:padding="4dp">

        <ImageView
            android:id="@+id/bookmarkIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/bookmark_icon"
            android:src="@drawable/baseline_bookmark_add_24"
            app:tint="@color/purple_200" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/event_image"
            android:src="@drawable/rounded_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:maxLength="30"
                android:text="@string/bernadya_solo_concert"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/eventOwnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semi_bold"
                android:maxLength="30"
                android:text="@string/gdsc_mulawarman_university"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/eventCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gdsc_mulawarman_university"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>